# ComputerVisionCourses

./: .gitignore  README.md
ColorPicker/: CMakeLists.txt  ColorPicker.cpp  windows_make.bat
example1/: CMakeLists.txt  main.cpp
example2/: main.cpp
example3/: main.cpp
example5/: main.cpp
example6/: CMakeLists.txt  main.cpp
shape/: cl.cpp
